# udp-flashlc-bridge

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING  CONTRIBUTING.md  Changelog.txt  Makefile.cocotron  Makefile.posix  README.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yml  release.yml
docs/: architecture.md  project-roadmap.md  reverse-engineering.md
docs/modules/: main.md  udp-listener.md
docs/protocol/: discovery.md  lifecycle.md  shared-memory.md
scripts/: run-verbose.sh  run.sh
src/: TFFlashLCSHMEM.c  TFFlashLCSHMEM.h  TuioDecoder.c  TuioDecoder.h  UDPListener.c  UDPListener.h  udp-flashlc-bridge.c
src/platform/: getopt.c  getopt.h
